adding profiles and basic search

--- a/auth.html
+++ b/auth.html
@@ -54,7 +54,7 @@
               alert(ack.err);
             } else {
               confirm("User created, to continue sign in!");
-              window.location = "/?content=signin";
+              window.location = "auth.html";
             }
           });
         }
