--- a/studio.html
+++ b/studio.html
@@ -57,7 +57,7 @@
 <script src="js/integration.js"></script>
 <script>
   function addProfiel(data) {
-    gun.get('profile').get(YOUR_ID).put(data);
+    gunDB.get('profile').get(YOUR_ID).put(data);
   }
 
   addProfiel({id: YOUR_ID});
